--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,14 @@
     "xstddef": "cpp",
     "xtr1common": "cpp",
     "xtree": "cpp",
-    "xutility": "cpp"
+    "xutility": "cpp",
+    "algorithm": "cpp",
+    "locale": "cpp",
+    "regex": "cpp",
+    "sstream": "cpp",
+    "xlocbuf": "cpp",
+    "xlocmes": "cpp",
+    "xlocmon": "cpp",
+    "xloctime": "cpp"
   }
 }
